# price-tracker-app

./: Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
PriceParser/: Dockerfile  pyproject.toml
PriceParser/protos/: parser.proto
PriceParser/src/: parser.py
PriceParser/src/core/: logger.py
PriceParser/src/grpc_server/: parser_pb2.py  parser_pb2_grpc.py  server.py
PriceParser/tests/: test_parser.py
PriceTrackerBot/: .dockerignore  pyproject.toml
PriceTrackerBot/app/: main.py
PriceTrackerBot/app/core/: config.py
PriceTrackerBot/app/services/: kafka_consumer.py
PriceTrackerBot/app/tg_bot/handlers/: add_product.py  common.py  del_product.py  list_products.py
PriceTrackerBot/app/tg_bot/keyboards/: builders.py
PriceTrackerBot/app/tg_bot/utils/: formatters.py  messages.py
app/: main.py
app/core/: config.py
app/grpc_client/: client.py  price_pb2_grpc.py
app/services/: kafka_consumer.py
app/services/grpc_client/: client.py  price_pb2.py
app/tg_bot/handlers/: add_item.py  add_product.py  common.py  del_product.py  list_products.py  updt_product_price.py
app/tg_bot/keyboards/: builders.py
protos/: price.proto
