[project]
name = "priceparser"
version = "0.1.0"
description = ""
authors = [
    {name = "iliya",email = "ipvolkov.fitm22@kubg.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.33.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "curl-cffi (>=0.15.0,<0.16.0)",
    "grpcio (>=1.80.0,<2.0.0)",
    "grpcio-tools (>=1.80.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
