[tool.poetry]
package-mode = false


[project]
name = "pricetrackerbot"
version = "0.1.0"
description = ""
authors = [
    {name = "iliya",email = "ipvolkov.fitm22@kubg.edu.ua"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "aiokafka (>=0.13.0,<0.14.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiogram (>=3.25.0,<4.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "grpcio (>=1.80.0,<2.0.0)",
    "grpcio-tools (>=1.80.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
